feat(release): v1.0 Production Ready - Achieved 2.3k TPS
- Optimized HikariCP & Redis for <190ms latency
- Dockerized full stack (Spring/Postgres/Kafka)
- Added K6 stress tests proving 100% data integrity
- Added System Design & Architecture docs